--- a/index.html
+++ b/index.html
@@ -188,7 +188,11 @@
         <article class="article4">
             <h2 class="title2">CONTACT US</h2>
             <p class="comment"><span>주소 : 부산광역시 해운대구 좌동 113-111</span> 지오프라자 2층<br>
-                    <span>전화번호 : 070-7155-1979 </span><span class="hide">/<span> <span>팩스번호 : 02-2139-1141</span><span class="hide">/<span> 이메일 : gijung23@nate.com</p>
+                    <span>전화번호 : 070-7155-1979 </span>
+                    <span class="hide">/</span> 
+                        <span>팩스번호 : 02-2139-1141</span>
+                        <span class="hide"> /</span>
+                        이메일 : gijung23@nate.com</p>
             <div class="map">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3168.8890210917407!2d126.88225875103356!3d37.41609794038772!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357b61466543bfbd%3A0xc4deea08b4fb2992!2z6rSR66qF7Jet!5e0!3m2!1sko!2skr!4v1611301323755!5m2!1sko!2skr" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             </div>
